header added to index

--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
 
 <body>
 
+  <header>
+    <div>
+      <div>
+        <span>Укр. / <a href="pages/en.html">Eng.</a></span>
+      </div>
+
+      <div>
+        <div>
+          <span>Владлен Кутовой</span>
+          <span>Website builder | Луцьк</span>
+        </div>
+
+        <div>
+          <img src="img/Profile_photo.png" alt="Vladlen's Photo">
+        </div>
+      </div>
+    </div>
+  </header>
 </body>
 
 </html>
