contact section added to index

--- a/index.html
+++ b/index.html
@@ -28,6 +28,25 @@
       </div>
     </div>
   </header>
+
+  <main>
+
+    <section>
+      <div>
+        <ul>
+          <li>
+            <a href="tel:+380958629660">+38 (095) 86-29-660</a>
+          </li>
+          <li>
+            <a href="mailto:kutovoj98@gmail.com">kutovoj98@gmail.com</a>
+          </li>
+          <li>
+            <a href="https://t.me/lenin_undead" target="_blank">Телеграм</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
