experience section added to index

--- a/index.html
+++ b/index.html
@@ -46,6 +46,26 @@
         </ul>
       </div>
     </section>
+
+    <section>
+      <div>
+        <div>
+          <h3>Досвід роботи</h3>
+        </div>
+
+        <div>
+          <ul>
+            <li>
+              <h4>Website builder | 2019-2022</h4>
+              <p>Працюючи фрілансером, брав участь у низці проєктів з розробки вебсайтів на основі CMS WordPress,
+                а також лише HTML/CSS. До моїх обов’язків належало додавання нових сторінок на вебсайти, створення
+                головних сторінок, управління контентом (пошук і редагування зображень), а також трохи SEO.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 
