--- a/index.html
+++ b/index.html
@@ -66,6 +66,32 @@
         </div>
       </div>
     </section>
+
+    <section>
+      <div>
+        <div>
+          <h3>Освіта</h3>
+        </div>
+
+        <div>
+          <ul>
+            <li>
+              <h4>Волинський національний університет імені Лесі Українки | 2020-2021</h4>
+              <p>Диплом магістра прикладної лінгвістки</p>
+              <p>Професійна кваліфікація: «Філолог. Перекладач. Викладач англійської та німецької мов. Фахівець ІТ
+                сфери»</p>
+              <p>Диплом з відзнакою</p>
+            </li>
+            <li>
+              <h4>Східноєвропейський національний університет імені Лесі Українки | 2016-2020</h4>
+              <p>Диплом бакалавра прикладної лінгвістки</p>
+              <p>Професійна кваліфікація: «Вчитель англійської мови та літератури, німецької мови та інформатики»</p>
+              <p>Диплом з відзнакою</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 
